Simplify and modernize